cluster/homelab/configs/kyverno/inject-image-pull-secrets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-default-image-pull-secret
  annotations:
    policies.kyverno.io/title: Inject default image pull secret
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/subject: ServiceAccount, ImagePullSecrets
    policies.kyverno.io/description: >-
      Adds 'default-image-pull-secret' to the 'imagePullSecrets' list of 
      any ServiceAccount created or updated. This ensures that pods using the SA 
      can pull images from private registries.
    policies.kyverno.io/severity: low
    kyverno.io/kyverno-version: 1.7.0
    policies.kyverno.io/minversion: 1.7.0
    kyverno.io/kubernetes-version: "1.23"
spec:
  rules:
    - name: inject-image-pull-secret
      match:
        any:
          - resources:
              kinds:
                - ServiceAccount
              names:
                - default
      mutate:
        mutateExistingOnPolicyUpdate: true
        targets:
          - kind: ServiceAccount
            name: default
            apiVersion: v1
        patchStrategicMerge:
          imagePullSecrets:
            - name: default-image-pull-secret
